# auto

./: R.spec  README.md  automation.py  automation_features.json  build_exe.py  client.py  config.py  coordinate_capture.py  dialogs.py  feature_group_viewer.py  main.py  pyproject.toml  requirements.txt  security_utils.py  ui_components.py  window_manager.py
