[project]
name = "dao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil==5.9.6",
    "pynput==1.7.6",
    "pyside6>=6.9.2",
    "pywin32==306",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
