[project]
name = "dao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altgraph==0.17.4",
    "packaging==25.0",
    "pefile==2023.2.7",
    "psutil==5.9.6",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pynput==1.7.6",
    "pyside6>=6.9.2",
    "pywin32==306",
    "pywin32-ctypes==0.2.3",
    "setuptools==80.9.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
